# fedi_de

./: .gitignore  Cargo.toml  approach.md  artitecture.md  readme.md
src/: main.rs
