[package]
name = "fedi_de"
version = "0.1.0"
edition = "2021"
authors = ["Himanshu <git: himasnhu-at> <email: hyattherate2005@gmail.com>"]
description = "assignment for role of DE at fedi"
repository = "https://github.com/himasnhu-at/fedi_de"

[dependencies]
rusqlite = "0.32.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
